Make all methods in CatsUtil static and remove it as dependency from all classes